# Project_SignalMaster

./: README.md  do_posec3d.py
Yolo/: Yolo-make-model.py  pose-modeling.py  run-code.py  save_image.py
car/: main.c  main.elf  main.hex  makefile
car/AP/: apMain.c  apMain.h
car/AP/Listener/: Listener.c  Listener.h
car/AP/Service/: Service.c  Service.h
car/Driver/HC_SR04/: HC_SR04.c  HC_SR04.h
car/Driver/Motor/: Motor.c  Motor.h
car/Model/Model_MotorDirectionState/: Model_MotorDirectionState.c
car/Model/Model_MotorHCState/: Model_MotorHCState.c  Model_MotorHCState.h
car/Periph/GPIO/: GPIO.c  GPIO.h
car/Periph/TIM/: TIM.c  TIM.h
car/Periph/UART0/: UART0.c  UART0.h
doc/research/: RCcar_todo.md  traffic_hand_signal_recognition_pipeline.md  traffic_signal_dataset_1.md
doc/research/model_pipline_by_hardware_requirements/: find_proper_model_pipeline.py  traffic_signal_model_pipeline_specs.html
jetson-nano-mount/: README.md  dependencies_tree.txt  dependencies_tree_with_torch.txt  hello.py  hello_junsu.py  pyproject.toml  readme.py  run copy.py  run.py  test.py  test_pyserial.py
jetson-nano-mount/.devcontainer/: Dockerfile  devcontainer.json
jetson-nano-mount/howto/: intellisense_for_ultralytics_package.md
jetson-nano-mount/issues/: python-Issues.md
jetson-nano-mount/requirements/: requirements.txt  requirements_dev.txt
jetson-nano-mount/scripts/: cp.sh
jetson-nano-mount/temp_issues/: tenssorrt.txt
jetson-nano-mount/testing/mmaction_or_pyskl-files/: ipython_test_yolo.py  pyproject.toml  temp_question.txt
jetson-nano-mount/testing/mmaction_or_pyskl-files/tools/: dist_train.sh
jetson-nano-mount/testing/mmaction_or_pyskl-files/x3d_shallow_ntu60_xsub/: do_posec3d.py  epcoh_24_eval_output.txt  epoch_24.pth
jetson_nano-mount/: hello.py  pyproject.toml
jetson_nano-mount/.devcontainer/: Dockerfile  devcontainer.json
models/: README.md
models/legacy/pose-estimation/: capture_image.py  data.yaml  run.py  run_code.py  train-yolo-fp16.py  train.py
models/legacy/pose-estimation/models/: best.cache  yolo11n-pose.cache
models/pose-estimation/: record.txt  train-yolo11n-pose.py
src/: Person-detection.py  README.md  detection.py  tempCodeRunnerFileset PYTHONIOENCODING=utf8 && python -u
src/car/: README.md  main.c  main.elf  main.hex
src/car/AP/: apMain.h
src/car/AP/Listener/: Listener.c  Listener.h
src/car/AP/Service/: Service.c  Service.h
src/car/Driver/HC_SR04/: HC_SR04.c  HC_SR04.h  HC_SR041.c
src/car/Driver/Motor/: Motor.c  Motor.h
src/car/Model/Model_MotorDirectionState/: Model_MotorDirectionState.h
src/car/Model/Model_MotorUARTState/: Model_MotorUARTState.c  Model_MotorUARTState.h
src/car/Periph/TIM/: TIM.c  TIM.h
src/jetson-nano-mount/: README.md  pyproject.toml  run.py  service.sh
src/jetson-nano-mount/howto/: intellisense_for_ultralytics_package.md
src/jetson-nano-mount/issues/: python-Issues.md
src/jetson-nano-mount/scripts/: pyskl_skeleton_dataset_downloader_and_keypoint_checker.py
src/jetson-nano-mount/temp/: py.py
src/pose-estimation/: README.md  data.yaml  quantization-fp16.py
x3d_shallow_ntu60_xsub/: README.md  do_posec3d.py  joint.py
(+234 files in other folders)
