[tool.poetry]
name = "jetson-nano-mount"
version = "0.1.0"
description = ""
authors = ["wbfw109v2 <wbfw109v2@gmail.com>"]


[tool.poetry.dependencies]
python = "~3.12.0"
opencv-python = "^4.10.0.84"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

