## 📝 This file must be located in external/mmaction2.
# when main project's pyproject.toml find sub-project from 'mmaction2 = {path = "external/mmaction2", develop = true}'
# poetry would find pyproject.toml or setup.py.


[tool.poetry]
name = "mmaction2"
version = "0.1.0"
description = "OpenMMLab Video Understanding Toolbox and Benchmark"
authors = ["wbfw109 <wbfw109@gmail.com>", "MMAction2 Contributors <openmmlab@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/open-mmlab/mmaction2"
keywords = ["computer vision", "video understanding"]

packages = [
    { include = "mmaction" }
]

[tool.poetry.dependencies]
python = "^3.12"
mmengine = "^0.10.5"
openmim = "^0.3.9"
ipykernel = "^6.29.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
mmcv = "<2.2.0"
moviepy = "^1.0.3"

[tool.poetry.extras]
all = [
    "decord", 
    "einops", 
    "matplotlib", 
    "numpy", 
    "opencv-contrib-python", 
    "pillow", 
    "scipy",
    "av",
    "future",
    "imgaug",
    "librosa",
    "lmdb",
    "openai-clip",
    "packaging",
    "pims",
    "PyTurboJPEG",
    "soundfile",
    "tensorboard",
    "wandb"
]
tests = ["coverage", "flake8", "interrogate", "isort", "parameterized", "pytest", "pytest-runner", "xdoctest", "yapf"]
mim = ["openmim"]
multimodal = ["some-multimodal-package"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
